fixed weird block page overflows

--- a/src/styleHolder.css
+++ b/src/styleHolder.css
@@ -1,6 +1,6 @@
 .left-nav ul a:hover {
   background-color: #0f40b9;
-  color: rgba(219, 234, 254, 1);
+  color: white;
 }
 .left-nav ul a:hover svg {
   fill: rgba(219, 234, 254, var(--tw-text-opacity));
@@ -8,6 +8,7 @@
 
 .left-nav ul a.selected {
   background-color: #0f40b9;
+  color: white;
 }
 
 .left-nav ul a svg {
@@ -16,7 +17,7 @@
 
 .left-nav ul a.selected svg {
   background-color: #0f40b9;
-  fill: rgba(219, 234, 254, var(--tw-text-opacity));
+  fill: white;
 }
 
 .top-header {
